# Django-project

./: .gitignore  README.md  pyproject.toml  requirements.txt  문서.Py  프로젝트_API_명세서.csv
.github/workflows/: checks.yml  ci.yml
app/: manage.py
app/accounts/: models.py  serializers.py  tests.py  urls.py  views.py
app/config/: urls.py
app/config/settings/: base.py
app/transactions/: models.py  serializers.py  tests.py  urls.py  views.py
app/users/: urls.py
app/users/migrations/: 0001_initial.py
apps/accounts/: models.py  serializers.py  tests.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/common/: models.py
apps/transactions/: models.py  serializers.py  tests.py  urls.py  views.py
apps/transactions/migrations/: 0001_initial.py
apps/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0002_user_is_staff.py
config/: urls.py
config/settings/: base.py  dev.py  prod.py
myproject/myproject/: settings.py
myproject/transaction/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
myproject/transaction/migrations/: 0001_initial.py  0002_alter_transaction_options_and_more.py
